Adding pagination and test performance
